--- a/Index.html
+++ b/Index.html
@@ -16,6 +16,8 @@
     <h1>Hello, world!</h1>
       
       <img src="Images/Yeet-696%20%20x%20357.jpg">
+      
+      <p>Yeet (This is New)</p>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
